# c_code_analyzer

./: .env.template  .gitignore  README.md  claims-analyzer.code-workspace  pyproject.toml
notebooks/: 01_explore_ast.ipynb
output copy/: dmn_emergency_rule.html  dmn_emergency_rule.md  modernized_emergency_rule.md
output copy/docs/: BR-EMERGENCY_Emergency_Rule.md
src/claims_analyzer/: __init__.py  ast_parser copy.py  ast_parser.py  cli.py  graph_builder.py  llm_client.py  llm_extractor.py  llm_markdown_doc_generator.py  llm_rule_modernizer.py  llm_synthesizer.py  rule_modernizer.py
tests/: test_ast_parser.py  test_cli.py
